[build-system]
requires = ["setuptools", "wheel", "Cython>=0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "dbhose_utils"
version = "0.1.0.dev0"
description = "DBHose dumps convertors utility."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "0xMihalich", email = "bayanmobile87@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "light-compressor==0.1.0.dev3",
    "nativelib==0.2.3.dev4",
    "pgcopylib==0.2.4.dev0",
    "pgpack==0.3.3.dev1",
]

[project.urls]
Homepage = "https://github.com/dns-technologies/dbhose_utils"
Documentation = "https://dns-technologies.github.io/dbhose_airflow/functions/dbhose_utils/index.html"
Repository = "https://github.com/dns-technologies/dbhose_utils"
Changelog = "https://github.com/dns-technologies/dbhose_utils/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dbhose_utils"]
exclude = ["dbhose_utils.common"]

[tool.setuptools.package-data]
"*" = ["**/*.pyx", "**/*.pyi", "**/*.pxd", "*.pxd", "*.pyd", "*.md", "*.txt"]
