[metadata]
name = dbhose_utils
version = 0.1.0.dev0
description = DBHose dumps convertors utility.

[options]
packages = find:
package_dir =
    = src
install_requires =
    light-compressor==0.1.0.dev3
    nativelib==0.2.3.dev4
    pgcopylib==0.2.4.dev0
    pgpack==0.3.3.dev1

[options.packages.find]
where = src
